# maciej-the-bot

./: Cargo.toml  LICENSE  README.md  help.txt
.github/workflows/: rust.yml
assets/: unknown_command.txt
features/: help.feature
messages/: help.txt  op_help.txt
old_src/_old/data/: client_configuration.rs  mod.rs
old_src/domain_approach/application/: mod.rs
old_src/domain_approach/domain/: mod.rs
old_src/domain_approach/infrastructure/: mod.rs
old_src/domain_approach/presentation/: groups.rs
src/: app.rs  config_repository.rs  help.rs  infra.rs  lib.rs  main.rs
src/_old/: lib.rs
src/_old/checks/: feature_check.rs  mod.rs
src/_old/command/: help.rs  mod.rs
src/_old/discord_facade/: mod.rs
src/app/: commands.rs  hooks.rs
src/application/: mod.rs
src/application/help_service/: prefix_configurable_help_service.rs
src/application/music_service/: mod.rs  queuing_music_service.rs
src/checks/: feature_check.rs
src/command/: help.rs  mod.rs
src/data/: client_configuration.rs  mod.rs  server_configuration.rs
src/discord/: mod.rs
src/discord/commands/: audio.rs  channeling.rs  mod.rs  player.rs  utils.rs
src/discord/model/: errors.rs  events.rs  managers.rs  messages.rs  mod.rs
src/discord_facade/: discord_facade_impl.rs  mod.rs
src/domain/: mod.rs
src/help/: mod.rs  presentation.rs
src/infra/: commands.rs
src/minecraft/: mod.rs  presentation.rs
src/presentation/: groups.rs  handlers.rs  mod.rs
src/utils/: global.rs  mod.rs  music.rs  song_queue.rs
tests/: specification.rs
tests/dsl/: help.rs  mod.rs
(+30 files in other folders)
