[package]
name = "maciej-the-bot"
version = "0.2.0"
authors = ["xavrax"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.10", features = ["framework"] }
thiserror = "1.0"
structopt = "0.3"
async-trait = "0.1"

[dev-dependencies]
test-case = "1.2"
mockall = "0.10"
