[package]
name = "maciej-the-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
serenity = "0.12"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
dotenv = "0.15"
